--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,13 @@ body{
     background-color: #EEEEEE;
 
 }
-img{
-    display: block;
+#image{
+    height: auto;
+    max-width: 100%;
+}
+figure{
+    background-color: white;
+    width: auto;
 }
 main{
     color: #333333;
